# AI-business-research-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  vercel.json
.rag_index/: 1782414875.npz  run_14f5b387_1782416410.npz  run_a13cf8fa_1782417598.npz  run_a5cad2f9_1782417657.npz
api/: index.py
docs/: JUDGING_GUIDE.md
rag/: session_store.json
research_agent/: __init__.py  agentic_rag.py  api.py  business_enrichment.py  cli.py  config.py  dedupe.py  discovery.py  extraction.py  geoapify_provider.py  http_client.py  locality.py  models.py  mongo_store.py  normalization.py  orchestrator.py  pdf_report.py  places_provider.py  query_parser.py  record_quality.py  report.py  search_providers.py  serper_provider.py  source_reliability.py  storage.py  verification.py
research_agent/rag/: chunking.py  config.py  embeddings.py  llm_ollama.py  lru_cache.py  pipeline.py  router.py  session_manager.py  test_lru_full.py  test_rag_full.py  test_session_manager.py  vector_store.py
research_agent/static/: chat.html  index.html  (+2 more)
tests/: test_agentic_rag.py  test_api_search_providers.py  test_business_enrichment.py  test_cross_category_quality.py  test_dedupe.py  test_discovery_strategy.py  test_geoapify_provider.py  test_google_places_provider.py  test_lead_mining.py  test_lead_place_enrichment.py  test_locality.py  test_orchestrator_limits.py  test_pdf_report.py  test_query_parser.py  test_rag_live_chat.py  test_readiness_api.py  test_record_quality.py  test_report.py  test_serper_provider.py  test_vercel_entrypoint.py  test_verification.py
(+2 files in other folders)
