[project]
name = "ai-business-research-agent"
version = "0.1.0"
description = "AI-powered business research agent for public web discovery, verification, deduplication, and reporting."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.2.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.0",
  "motor>=3.5.0",
  "reportlab>=4.2.0"
]

[project.optional-dependencies]
browser = ["playwright>=1.45.0"]
dev = ["pytest>=8.2.0", "ruff>=0.5.0"]

[project.scripts]
research-agent = "research_agent.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.vercel]
entrypoint = "research_agent.api:app"
